--- a/app/AlcoholCompass/res/values/strings.xml
+++ b/app/AlcoholCompass/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">AlcoholCompass</string>
     <string name="action_settings">Settings</string>
+    <string name="fragment_navigation_title">Kompass</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
