--- a/app/AlcoholCompass/res/values/strings.xml
+++ b/app/AlcoholCompass/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">AlcoholCompass</string>
     <string name="action_settings">Settings</string>
+    <string name="more">Mehr</string>
+    <string name="less">Weniger</string>
     <string name="fragment_navigation_title">Kompass</string>
     <string name="fragment_showtell_title">Du willst mehr?</string>
 
