--- a/app/AlcoholCompass/res/values/strings.xml
+++ b/app/AlcoholCompass/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="more">Mehr</string>
     <string name="less">Weniger</string>
+    <string name="close">^ schließen ^</string>
     <string name="navigation">Navigation</string>
     <string name="report_bar">Kiosk / Bar melden</string>
     <string name="fragment_navigation_title">Kompass</string>
