--- a/app/AlcoholCompass/res/values/strings.xml
+++ b/app/AlcoholCompass/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="more">Mehr</string>
     <string name="less">Weniger</string>
-    <string name="close">^ schließen ^</string>
     <string name="navigation">Navigation</string>
     <string name="report_bar">Kiosk / Bar melden</string>
     <string name="fragment_navigation_title">Kompass</string>
@@ -13,6 +12,7 @@
     <string name="alert_dialog_ok">Ok</string>
     <string name="open_from">, geöffnet ab</string>
     <string name="open_until">, geöffnet bis</string>
+    <string name="open_until_row">Geöffnet bis</string>
     <string name="clock">Uhr</string>
     <string name="alert_dialog_cancel">Abbrechen</string>
     <string name="dialog_guestbook_title">We found the alcohol</string>
